--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,3 +6,8 @@ authors: [aixoio]
 depend:
   - WorldGuard
   - WorldEdit
+commands:
+  claim:
+    description: You can use this command to claim land
+    usage: /<command> <name> <x> <y> z> <x> <y> <z>
+    permission: easyguard.claim
