--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,3 +11,7 @@ commands:
     description: You can use this command to claim land
     usage: /<command> <name> <x> <y> z> <x> <y> <z>
     permission: easyguard.claim
+  claims:
+    description: You can use this command to see who has claimed land
+    usage: /<command>
+    permission: easyguard.claims
