--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -15,3 +15,7 @@ commands:
     description: You can use this command to see who has claimed land
     usage: /<command>
     permission: easyguard.claims
+  current-claim:
+    description: Tells you all of the claims you are currently in
+    usage: /<command>
+    permission: easyguard.current-claim
