Add size to config

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,11 @@
 
+# CLAIM BOUNDS COMMAND SETTINGs
 MASTER_POINT_PARTICLE_COUNT: 60
 POINT_PARTICLE_COUNT: 30
 POINT_LINE_PARTICLE_COUNT: 15
+POINT_SIZE: 5.0
+LINE_SIZE: 2.5
+
+# USER DATA - DO NOT CHANGE
 
 data:
