Add block line options for /claim-bounds

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,6 +5,11 @@ POINT_PARTICLE_COUNT: 30
 POINT_LINE_PARTICLE_COUNT: 15
 POINT_SIZE: 5.0
 LINE_SIZE: 2.5
+# Set to AIR to disable this
+CORRONR_BLOCK: GLOWSTONE
+LINE_BLOCk: GLASS
+# How long to show the block border for
+SHOW_FOR_SECONDS: 5
 
 # CLAIM COMMAND SETTINGS
 
