Add claim coroner block point and fix spelling

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,8 +6,9 @@ POINT_LINE_PARTICLE_COUNT: 15
 POINT_SIZE: 5.0
 LINE_SIZE: 2.5
 # Set to AIR to disable this
-CORRONR_BLOCK: GLOWSTONE
+CORONER_BLOCK: GLOWSTONE
 LINE_BLOCk: GLASS
+CORONER_POINT_BLOCK: GOLD_BLOCK
 # How long to show the block border for
 SHOW_FOR_SECONDS: 5
 
