--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -21,6 +21,9 @@ MAX_SIZE_WIDTH: 35
 MAX_SIZE_LENGTH: 35
 MAX_SIZE_HEIGHT: 35
 
+# WHERE COMMAND SETTINGS
+WHERE_GIVE_COMPASS: true
+
 # SAFE-LIST
 
 # Set this to true to enable this
