--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     compileOnly 'com.sk89q.worldedit:worldedit-bukkit:7.2.14'
 }
 
-group = 'github.aixoio'
+group = 'com.github.aixoio.easyguard'
 version = '4.0'
 description = 'EasyGuard'
 
